MMOItemType super type